Complete Lesson 7 note. Starting Lesson 8 note.

--- a/Lesson 5: Computer Vision Fundamentals.tex
+++ b/Lesson 5: Computer Vision Fundamentals.tex
@@ -4,6 +4,9 @@
 \usepackage{listings}
 \usepackage{xcolor}
 
+\setlength{\parindent}{0em}
+\setlength{\parskip}{1em}
+
 %New colors defined below
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
@@ -16,7 +19,7 @@
   keywordstyle=\color{magenta},
   numberstyle=\tiny\color{codegray},
   stringstyle=\color{codepurple},
-  basicstyle=\ttfamily\footnotesize,
+  basicstyle=\ttfamily\normalsize,
   breakatwhitespace=false,         
   breaklines=true,                 
   captionpos=b,                    
@@ -32,7 +35,7 @@
 \lstset{style=mystyle}
 
 \title{Lesson 5: Computer Vision Fundamentals}
-\author{jinil }
+\author{Jinil Jang }
 \date{October 2019}
 
 \begin{document}
