--- a/Lesson 7: Camera Calibration.tex
+++ b/Lesson 7: Camera Calibration.tex
@@ -16,11 +16,12 @@
 
 %Code listing style named "mystyle"
 \lstdefinestyle{mystyle}{
-  backgroundcolor=\color{backcolour},   commentstyle=\color{codegreen},
+  backgroundcolor=\color{backcolour},   
+  commentstyle=\color{codegreen},
   keywordstyle=\color{magenta},
   numberstyle=\tiny\color{codegray},
   stringstyle=\color{codepurple},
-  basicstyle=\ttfamily\footnotesize,
+  basicstyle=\ttfamily\normalsize,
   breakatwhitespace=false,         
   breaklines=true,                 
   captionpos=b,                    
@@ -38,7 +39,7 @@
 \graphicspath{{resources/}}
 
 \title{Lesson 7: Camera Calibration}
-\author{jinil }
+\author{Jinil Jang }
 \date{October 2019}
 
 \begin{document}
@@ -98,7 +99,7 @@ if ret == True:
     plt.imshow(img)
 \end{lstlisting}
 
-\section{Camera Calibration}
+\section{Undistort}
 
 Extract object points and image points for camera calibration.
 \begin{lstlisting}[language=Python]
@@ -171,5 +172,90 @@ ax1.set_title('Original Image', fontsize=30)
 ax2.imshow(dst)
 ax2.set_title('Undistorted Image', fontsize=30)
 \end{lstlisting}
+
+\begin{figure}[htp]
+    \centering
+    \includegraphics[width=15cm]{camera_calibration.png}
+    \label{fig:camera_calibration}
+\end{figure}
+
+\section{Undistort and Transform}
+
+\begin{lstlisting}[language=Python]
+import pickle
+import cv2
+import numpy as np
+import matplotlib.pyplot as plt
+import matplotlib.image as mpimg
+
+# Read in the saved camera matrix and distortion coefficients
+# These are the arrays you calculated using cv2.calibrateCamera()
+dist_pickle = pickle.load( open( "wide_dist_pickle.p", "rb" ) )
+mtx = dist_pickle["mtx"]
+dist = dist_pickle["dist"]
+
+# Read in an image
+img = cv2.imread('test_image2.png')
+nx = 8 # the number of inside corners in x
+ny = 6 # the number of inside corners in y
+
+# MODIFY THIS FUNCTION TO GENERATE OUTPUT 
+# THAT LOOKS LIKE THE IMAGE ABOVE
+def corners_unwarp(img, nx, ny, mtx, dist):
+    # Pass in your image into this function
+    # Write code to do the following steps
+    # 1) Undistort using mtx and dist
+    img = cv2.undistort(img, mtx, dist, None, mtx)
+    
+    # 2) Convert to grayscale
+    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)
+    
+    # 3) Find the chessboard corners
+    ret, corners = cv2.findChessboardCorners(gray, (nx, ny), None)
+    
+    # 4) If corners found: 
+    if ret == True:
+        # a) draw corners
+        cv2.drawChessboardCorners(img, (nx, ny), corners, ret)
+        
+        # b) define 4 source points src = np.float32([[,],[,],[,],[,]])
+        src = np.float32(
+            [[436, 114],
+             [573, 137],
+             [575, 268],
+             [441, 256]])
+        
+        # c) define 4 destination points dst = np.float32([[,],[,],[,],[,]])
+        dst = np.float32(
+            [[100, 100],
+             [242, 100],
+             [242, 242],
+             [100, 242]])
+             
+        # d) use cv2.getPerspectiveTransform() to get M, the transform matrix
+        M = cv2.getPerspectiveTransform(src, dst)
+        
+        # e) use cv2.warpPerspective() to warp your image to a top-down view
+        img_size = (img.shape[1], img.shape[0])
+        warped = cv2.warpPerspective(img, M, img_size, flags=cv2.INTER_LINEAR)
+        
+    #delete the next two lines
+    return warped, M
+
+top_down, perspective_M = corners_unwarp(img, nx, ny, mtx, dist)
+f, (ax1, ax2) = plt.subplots(1, 2, figsize=(24, 9))
+f.tight_layout()
+ax1.imshow(img)
+ax1.set_title('Original Image', fontsize=50)
+ax2.imshow(top_down)
+ax2.set_title('Undistorted and Warped Image', fontsize=50)
+plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)
+\end{lstlisting}
+
+\begin{figure}[htp]
+    \centering
+    \includegraphics[width=15cm]{undistorted_warped_img.png}
+    \label{fig:undistorted_warped_img}
+\end{figure}
 
 \end{document}
